Fix save card bubble legal message clicking metrics logging.

The logic was moved to a legal message view class in the view_util.*,
and when removing, metrics logging was not correctly set.

Bug: 898724
Change-Id: I8f285b61003a49cdc884641a9ff526b1760abcb0
Reviewed-on: https://chromium-review.googlesource.com/c/1298713
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Siyu An <siyua@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603239}