chrome/browser/ui/views/autofill/local_card_migration_offer_view.h
@@ -11,10 +11,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/views/controls/button/button.h"
 #include "ui/views/controls/styled_label_listener.h"
 
-namespace content {
-class WebContents;
-}  // namespace content
-
 namespace autofill {
 
 class LocalCardMigrationDialogController;
@@ -28,8 +24,7 @@ class LocalCardMigrationOfferView : public views::View,
                                     public views::StyledLabelListener {
  public:
   LocalCardMigrationOfferView(LocalCardMigrationDialogController* controller,
-                              views::ButtonListener* listener,
-                              content::WebContents* web_contents);
+                              views::ButtonListener* listener);
   ~LocalCardMigrationOfferView() override;
 
   // views::StyledLabelListener:
@@ -43,8 +38,6 @@ class LocalCardMigrationOfferView : public views::View,
   void Init(views::ButtonListener* listener);
 
   LocalCardMigrationDialogController* controller_;
-
-  content::WebContents* web_contents_;
 
   views::View* card_list_view_ = nullptr;
 
