chrome/browser/ui/views/autofill/view_util.h
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/gfx/color_palette.h"
 #include "ui/views/controls/styled_label_listener.h"
 #include "ui/views/view.h"
+#include "url/gurl.h"
 
 namespace views {
 class Label;
@@ -54,9 +55,7 @@ class LegalMessageView : public views::View {
                             views::StyledLabelListener* listener);
   ~LegalMessageView() override;
 
-  void OnLinkClicked(views::StyledLabel* label,
-                     const gfx::Range& range,
-                     content::WebContents* web_contents);
+  const GURL GetUrlForLink(views::StyledLabel* label, const gfx::Range& range);
 
  private:
   std::unique_ptr<views::StyledLabel> CreateLegalMessageLineLabel(
