components/autofill/core/browser/ui/local_card_migration_dialog_controller.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/macros.h"
 #include "base/strings/string16.h"
 #include "components/autofill/core/browser/legal_message_line.h"
+#include "url/gurl.h"
 
 namespace autofill {
 
@@ -32,7 +33,7 @@ class LocalCardMigrationDialogController {
       const std::vector<std::string>& selected_cards_guids) = 0;
   virtual void OnCancelButtonClicked() = 0;
   virtual void OnViewCardsButtonClicked() = 0;
-  virtual void OnLegalMessageLinkClicked() = 0;
+  virtual void OnLegalMessageLinkClicked(const GURL& url) = 0;
   virtual void OnDialogClosed() = 0;
 
  private:
